OPTIONAL SORTING AND FREE_SHIPMENT

--- a/config.cfg
+++ b/config.cfg
@@ -1,13 +1,23 @@
 ########################
-# sepeti_goster		= Boolean
-# chrome_kapat		= Boolean
-# duzenli_gecikme  	= Float 
+# sepeti_goster		    = Boolean
+# chrome_kapat		    = Boolean
+# duzenli_gecikme  	    = Float 
 # hata_sayfasi_gecikme	= Float
 # chrome_kapat_gecikme	= Float
+# kargo_bedava		    = Boolean
+# siralama			    = Integer 
+#// 0 = En cok degerlendirilen 
+#// 1 = En düşük fiyat 
+#// 2 = En yüksek fiyat
+#// 3 = En cok satan  
+#// 4 = En cok begenilen 
+#// 5 = En yeni
 ########################
 [Ayarlar]
-sepeti_goster=0
+sepeti_goster=1
+siralama=1
+kargo_bedava=0
 chrome_kapat=0
 duzenli_gecikme=0.3
-hata_sayfasi_gecikme=3
+hata_sayfasi_gecikme=2
 chrome_kapat_gecikme=2
